# agent-landing-page-template

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/agent_landing_page_template/: __init__.py  cli.py  core.py
tests/: test_core.py
