[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-landing-page-template"
version = "0.1.0"
description = "Polished landing page template for AI agent products and services."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/agent-landing-page-template"
Issues = "https://github.com/erron-ai/agent-landing-page-template/issues"

[project.scripts]
agent-landing-page-template = "agent_landing_page_template.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
